--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^11.3.4",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.1",
     "typescript": "4.4.2",
