--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "make-sense",
   "version": "1.0.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
